[package]
name = "compare-head"
version = "0.1.0"
authors = ["Adrian Nagy <adrian.nagy@simplestaking.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
tokio = "0.2.0-alpha.6"
futures-preview = "0.3.0-alpha.19"
assert-json-diff = "1.0.0"