[package]
name = "compare-head"
version = "0.1.0"
authors = ["Adrian Nagy <adrian.nagy@simplestaking.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
assert-json-diff = "1.0.0"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }